# singleton-class-decorator

./: .pre-commit-config.yaml  CHANGELOG.md  How_it_works.md  LICENSE  README.md  get_coverage.sh  make_badge_in_readme.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: main.yml  make_coverage_badge.yml
robust_singleton_decorator/: MetaClasses.py  cache.py  singleton.py  singleton_v2.py
singleton_class_decorator/: MetaClasses.py  __init__.py  logging.py  singleton.py  utils.py
tests/: test_meta_classes.py  test_singleton.py
